# magiclip

./: .gitignore  Cargo.toml  README.md
magiclip/: Cargo.toml
magiclip-dtos/: Cargo.toml
magiclip-dtos/src/: lib.rs
magiclip-macros/: Cargo.toml
magiclip-macros/src/: lib.rs
magiclip/src/: clipboard_client.rs  daemon_client.rs  ffi.rs  lib.rs  main.rs  net.rs  util.rs
magiclip/src/app/: app.rs  server.rs
magiclip/src/mdns/: service_registration.rs  service_resolution.rs
magiclip/src/mdns/avahi/: browser.rs  client.rs  entry_group.rs  mod.rs  raw_browser.rs  resolver.rs  service.rs
magiclip/src/mdns/avahi/browser/: backend.rs  browser.rs  mod.rs
magiclip/src/mdns/bonjour/: backend.rs  browser.rs  mod.rs  service.rs  service_ref.rs
magiclip/src/ops/: fetch.rs  mod.rs  push.rs
magiclipd/: Cargo.toml  install.sh  magiclipd.plist  magiclipd.service  start.sh  stop.sh
magiclipd/src/: clipboard_server.rs  daemon.rs  daemon_server.rs  lib.rs  main.rs
magiclipd/src/mdns/: discovery.rs  mod.rs
magiclipd/src/mdns/avahi/: browser.rs  client.rs  service.rs
magiclipd/src/mdns/bonjour/: browser.rs  service.rs
src/: app.rs  lib.rs  main.rs  serv.rs  service.rs  util.rs
src/app/: app.rs  mod.rs  server.rs
src/mdns/: err.rs  mod.rs  service_registration.rs  service_resolution.rs  types.rs
src/mdns/avahi/: browser.rs  client.rs  entry_group.rs  err.rs  mod.rs  poll.rs  service.rs  service_resolution.rs  util.rs
src/mdns/avahi/browser/: backend.rs  browser.rs
src/mdns/avahi/service/: factory.rs  mod.rs  service.rs
src/mdns/bonjour/: backend.rs  browser.rs  mod.rs  resolver.rs  service.rs
zeroconf/: Cargo.toml
zeroconf-browser-example/: Cargo.toml
zeroconf-macros/: Cargo.toml
zeroconf-service-example/: Cargo.toml
zeroconf/src/: discovery.rs  lib.rs
zeroconf/src/avahi/: address.rs  err.rs  mod.rs  service.rs
zeroconf/src/bonjour/: browser.rs  service.rs
zeroconf/src/linux/: avahi_util.rs  browser.rs  mod.rs  poll.rs  raw_browser.rs
zeroconf/src/macos/: compat.rs  mod.rs  service.rs
