[package]
name = "magiclip"
version = "0.1.0"
authors = ["Walker Crouse <walker.crouse@coop.co.uk>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
colored = "2.0.0"
dialoguer = "0.6.2"
console = "0.11.2"
log = "0.4.11"
env_logger = "0.7.1"
zeroconf = { path = "../../zeroconf-rs/zeroconf", version = "0.6.2" }
magiclip-dtos = { path = "../magiclip-dtos" }
clap = "3.0.0-beta.2"
clipboard = "0.5.0"
