[package]
name = "magiclipd"
version = "0.1.0"
authors = ["Walker Crouse <walker.crouse@coop.co.uk>"]
edition = "2018"

[dependencies]
clipboard = "0.5.0"
tokio = { version = "0.2.22", features = ["full"] }
derive-new = "0.5.8"
derive-getters = "0.2.0"
log = "0.4.11"
env_logger = "0.7.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
whoami = "0.9.0"
zeroconf = { path = "../../zeroconf-rs/zeroconf", version = "0.6.2" }
magiclip-dtos = { path = "../magiclip-dtos" }

[package.metadata.precommit]
fmt = "cargo fmt"
test = "cargo test"
